# wildfires

./: README.md  outline.md
local_tests/: .cache.sqlite  README.md  ai_slop.html  main.py  pyproject.toml
