[project]
name = "local-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "geopolars>=0.1.0a4",
    "marimo[recommended]>=0.14.16",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "openmeteo-requests>=1.6.0",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "pyproj>=3.7.1",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.3",
]
